# whisper_dictation

./: CLAUDE.md  README  pyproject.toml
whisper_dictation/: daemon.py  toggle.py
