[project]
name = "whisper-dictation"
version = "0.1.0"
description = "Voice typing with Whisper large-v3-turbo"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[project.scripts]
whisper-dictation-daemon = "whisper_dictation.daemon:main"
whisper-dictation-toggle = "whisper_dictation.toggle:main"

[tool.setuptools]
packages = ["whisper_dictation"]

[tool.uv]
package = true
